[tool.poetry]
name = "ha_integration"
version = "0.0.1"
description = ""
authors = ["Rohit <bogusfocused@gmail.com>"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "3.9.6"
pre-commit = "^2.14.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
pytz = "^2021.1"
tzdata = "^2021.1"
pytest-asyncio = "^0.15.1"
autopep8 = "^1.5.7"
homeassistant = "^2021.8.1"
pysmartthings = "^0.7.6"
pysmartapp = "^0.3.3"
voluptuous-stubs = "^0.1.1"
python-dotenv = "^0.19.0"


[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.poetry.scripts]
